--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline"
+    "dev": "webpack-dev-server --inline"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.17.1",
@@ -21,6 +26,12 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "antd": "^3.9.1",
+    "axios": "^0.18.0",
+    "face-api.js": "^0.12.0",
+    "jquery": "^3.3.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "rxjs": "^6.3.1"
   }
 }
